--- a/splash/default.ini
+++ b/splash/default.ini
@@ -1,7 +1,7 @@
-[tor]
+[proxy]
 
 ; required
-host= localhost
+host=localhost
 port=9050
 
 ; optional, default is HTTP. Allowed values are HTTP and SOCKS5
